--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "next-images": "^1.8.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
     "styled-components": "^5.3.5"
   },
@@ -44,6 +44,7 @@
     "jest-environment-jsdom": "^28.0.2",
     "miragejs": "^0.1.44",
     "prettier": "^2.6.2",
+    "react-router-dom": "^6.3.0",
     "typescript": "4.6.3"
   }
 }
