--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "17.0.25",
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
@@ -45,6 +46,8 @@
     "miragejs": "^0.1.44",
     "prettier": "^2.6.2",
     "react-router-dom": "^6.3.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "4.6.3"
   }
 }
