--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.12.2",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "google-map-react": "^2.2.0",
     "moment": "^2.29.3",
     "next": "12.1.5",
     "next-images": "^1.8.4",
@@ -24,6 +26,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@types/aos": "^3.0.4",
+    "@types/google-map-react": "^2.1.7",
     "@types/node": "17.0.25",
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
