--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/aos": "^3.0.4",
     "@types/google-map-react": "^2.1.7",
     "@types/node": "17.0.25",
