--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/parser": "^5.20.0",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "axios-mock-adapter": "^1.21.2",
     "babel-jest": "^28.0.2",
     "eslint": "^8.13.0",
     "eslint-config-next": "12.1.5",
