--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@react-google-maps/api": "^2.12.2",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "formik": "^2.2.9",
     "google-map-react": "^2.2.0",
     "moment": "^2.29.3",
     "next": "12.1.5",
     "next-images": "^1.8.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.43.1",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
-    "styled-components": "^5.3.5"
+    "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.5",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
