--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.0.0",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.5",
     "yup": "^1.0.0"
   },
