--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-moment": "^1.1.2",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.5",
+    "swr": "^2.0.4",
     "yup": "^1.0.0"
   },
   "devDependencies": {
