--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
+    "react-query": "^3.39.3",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.5",
     "yup": "^1.0.0"
@@ -36,6 +37,7 @@
     "@types/node": "17.0.25",
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
+    "@types/react-query": "^1.2.9",
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
