--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "next": "12.1.5",
     "next-images": "^1.8.4",
     "react": "18.0.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.1",
+    "react-use-cookie": "^1.4.0",
     "styled-components": "^5.3.5",
     "swr": "^2.0.4",
     "yup": "^1.0.0"
