--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@react-google-maps/api": "^2.12.2",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "cookies-next": "^2.1.1",
     "formik": "^2.2.9",
     "google-map-react": "^2.2.0",
     "moment": "^2.29.3",
@@ -24,7 +25,6 @@
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
-    "react-use-cookie": "^1.4.0",
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.1",
     "react-use-cookie": "^1.4.0",
