--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookies-next": "^2.1.1",
     "formik": "^2.2.9",
     "google-map-react": "^2.2.0",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "next": "12.1.5",
     "next-images": "^1.8.4",
