--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_BASE_URL= "http://localhost:5554"
+NEXT_PUBLIC_BASE_URL= "http://localhost:5554" 
 
-NEXT_PUBLIC_TOKEN_KEY=
+NEXT_PUBLIC_TOKEN_KEY="baadaye-token"
